<resources>
    <string name="app_name">Foobar++</string>
    <string name="action_clear_text">Clear Text</string>
    <string name="action_search">Search</string>
    <string name="action_detail">Detail</string>
    <string name="load_error_retry">Retry</string>
    <string name="load_state_retry">Retry</string>
    <string name="error_resolve_activity_failed">No application to handle this action.</string>
    <string name="loading_error_title">No connection</string>
    <string name="loading_error_content">Please check your internet connection and try again.</string>
    <string name="auth_input_title">Login</string>
    <string name="auth_input_description">Login using your ITSC username.</string>
    <string name="auth_input_hint_username">Username</string>
    <string name="auth_input_email_hint_domain">Domain</string>
    <string name="auth_input_confirm">Login</string>
    <string name="auth_input_skip">Skip</string>
    <string name="auth_input_username_empty">Please enter your username to login.</string>
    <string name="auth_verify_title">We have sent you a sign-in link</string>
    <string name="auth_verify_description">Please check your ITSC mailbox.</string>
    <string name="auth_verify_no_email">Didn\'t receive the email?&#160;</string>
    <string name="auth_verify_resend_email">Resend Email</string>
    <string name="auth_error_message">Sign-in error. Please try again.</string>
    <string name="auth_cancel_message">Sign-in canceled.</string>
    <string name="auth_signed_in_message">Already signed in.</string>
    <string name="auth_email_resend_timer_message">Please try a few seconds later.</string>
    <string name="auth_signed_out_message">Signed out.</string>
    <string name="onboarding_get_started">Get Started</string>
    <string name="onboarding_browse_food_title">Browse your favourite food</string>
    <string name="onboarding_browse_food_description">Find your favourite food in campus restaurants with the latest discounts and promotions</string>
    <string name="onboarding_group_orders_title">Create group orders</string>
    <string name="onboarding_group_orders_description">You can create group orders with your friends and colleague to enjoy better discounts</string>
    <string name="onboarding_pick_up_delivery_title">Pick up or delivery</string>
    <string name="onboarding_pick_up_delivery_description">You can enjoy our fast delivery service or pick up your orders in person</string>
    <string name="nav_title_seller">Restaurants</string>
    <string name="nav_title_order">Order</string>
    <string name="nav_title_explore">Explore</string>
    <string name="nav_title_settings">Settings</string>
    <string name="settings_account_edit_profile">View My Profile</string>
    <string name="settings_account_guest">Guest</string>
    <string name="settings_account_sign_in">Click to Sign In</string>
    <string name="settings_section_contact_us_title">Contact Us</string>
    <string name="settings_section_license_title">License</string>
    <string name="settings_section_features_title">Features</string>
    <string name="settings_section_sign_out_title">Sign Out</string>
    <string name="profile_toolbar_title">My Profile</string>
    <string name="profile_edit_field_name">Name</string>
    <string name="profile_edit_field_phone_number">Phone Number</string>
    <string name="profile_edit_field_input_not_set">Not Set</string>
    <string name="profile_edit_field_input_invalid">Invalid input.</string>
    <string name="profile_require_data_for_ordering">Profile data have to be set before using ordering service.</string>
    <string name="profile_user_detail_updated">Profile Updated.</string>
    <string name="sign_out_dialog_title">Sign Out</string>
    <string name="sign_out_dialog_message">Do you want to sign out with the current account?</string>
    <string name="seller_type_on_campus">On Campus</string>
    <string name="seller_type_off_campus">Off Campus</string>
    <string name="seller_tab_on_campus">On Campus</string>
    <string name="seller_tab_off_campus">Off Campus</string>
    <string name="seller_subtitle">Restaurants</string>
    <string name="seller_status_online">Opening</string>
    <string name="seller_status_offline">Closed</string>
    <string name="seller_on_campus_item_min_spend">$ %.1f Min</string>
    <string name="seller_empty_message">No Restaurant Found</string>
    <string name="seller_detail_deliver_type_pick_up">Pickup</string>
    <string name="seller_detail_deliver_type_delivery">Delivery</string>
    <string name="seller_detail_offline_message">Restaurant is offline.</string>
    <string name="seller_detail_format_min_spend">HKD %.2f Min</string>
    <string name="seller_detail_format_delivery_cost">HKD %s DELIVERY</string>
    <string name="seller_detail_format_section_info">[%s] %s</string>
    <string name="seller_search_hint_input">Find Restaurants</string>
    <string name="seller_misc_title_description">Seller Info</string>
    <string name="seller_action_add_favorite">Add to Favorite</string>
    <string name="seller_action_ratings">View Ratings</string>
    <string name="seller_action_feedback">Send Feedback</string>
    <string name="seller_action_misc">Seller Details</string>
    <string name="seller_item_data_format_price">$ %.1f</string>
    <string name="seller_item_submit_add">Add To Cart ($ %.1f)</string>
    <string name="seller_item_submit_update">Update To Cart ($ %.1f)</string>
    <string name="seller_item_rating_null">n.a.</string>
    <string name="seller_item_detail_format_item_count">%d Items Left</string>
    <string name="seller_item_detail_increment_content_desc">Add Item</string>
    <string name="seller_item_detail_decrement_content_desc">Remove Item</string>
    <string name="seller_item_detail_error_dialog_title">Add Item</string>
    <string name="seller_item_detail_invalid_seller_message">Your cart contains items from another restaurant.</string>
    <string name="seller_item_detail_subtitle_more_items">Suggest Items (+$ %.1f)</string>
    <string name="seller_item_detail_toolbar_title_add">Add Item</string>
    <string name="seller_item_detail_toolbar_title_update">Update Item</string>
    <string name="seller_item_detail_profile_action">Profile</string>
    <string name="seller_section_date">Order opens at %s</string>
    <string name="seller_section_cutoff_time">Order due at %s</string>
    <string name="seller_section_available">Available</string>
    <string name="seller_section_upcoming"># Upcoming</string>
    <string name="seller_section_user_counts">%d/%d Joined</string>
    <string name="seller_section_subtitle_recent">Recent</string>
    <string name="seller_section_subtitle_upcoming">Upcoming</string>
    <string name="seller_section_empty_message">No Group Section Found</string>
    <string name="seller_section_detail_info_title">Order Detail</string>
    <string name="seller_section_detail_users_title">Participants (%d/%d)</string>
    <string name="seller_section_detail_counter_on_subtitle">Time Left</string>
    <string name="seller_section_detail_counter_off_subtitle">Available On</string>
    <string name="seller_section_detail_title_delivery_date">Date</string>
    <string name="seller_section_detail_title_due_time">Due Time</string>
    <string name="seller_section_detail_title_delivery_time">Delivery Time</string>
    <string name="seller_section_detail_pick_up_location">Pick Up</string>
    <string name="seller_section_detail_seller_info_ship_from">Detail</string>
    <string name="seller_section_detail_button_menu">Open Menu</string>
    <string name="seller_section_detail_related_sections_title">More Orders</string>
    <string name="more_sections_subtitle">More Orders</string>
    <string name="more_sections_section_item_format_delivery_time">Deliver %s</string>
    <string name="more_sections_show_more">More</string>
    <string name="seller_section_list_toolbar_title">Group Sections -\n%s</string>
    <string name="checkout_toolbar_title_cart">My Cart</string>
    <string name="checkout_toolbar_title_payment">Payment</string>
    <string name="checkout_toolbar_title_order_placing">Placing Order…</string>
    <string name="checkout_toolbar_title_order_result_success">Success!</string>
    <string name="checkout_toolbar_title_order_result_failed">Something went wrong!</string>
    <string name="checkout_submit_button_title_cart">Choose Payment</string>
    <string name="checkout_submit_button_title_payment">Confirm Order</string>
    <string name="checkout_confirm_dialog_title">Submit Order</string>
    <string name="checkout_confirm_dialog_message">Are you sure to submit the order?</string>
    <string name="order_placing_message">Please wait while we were placing your order. This may take a while.</string>
    <string name="order_result_title_order_code">Your Order Code:</string>
    <string name="order_result_format_order_code"># %s</string>
    <string name="order_result_message_order_code">Order code will be used for identification when you pick up the order.</string>
    <string name="order_result_button_complete">Complete</string>
    <string name="order_result_button_return">Return to Cart</string>
    <string name="cart_bottom_bar_title_items_count">Items in Cart</string>
    <string name="cart_bottom_bar_format_items_count">%d</string>
    <string name="cart_info_nav_subtitle_section">From %s</string>
    <string name="cart_info_nav_format_section">%s @ %s</string>
    <string name="cart_info_nav_subtitle_misc_on_campus">[On Campus] Pick Up</string>
    <string name="cart_info_nav_subtitle_misc_off_campus">[Off Campus] Deliver To</string>
    <string name="cart_total_price_title_total">Total</string>
    <string name="cart_total_price_title_subtotal">Subtotal</string>
    <string name="cart_total_price_title_delivery_fee">Delivery</string>
    <string name="cart_notes_subtitle">Leave Message</string>
    <string name="cart_notes_hint">e.g. No cutlery</string>
    <string name="cart_empty_message">No Item in Cart</string>
    <string name="cart_actions_button_clear_cart">Clear Cart</string>
    <string name="cart_purchase_subtitle">My Items</string>
    <string name="cart_purchase_actions_add_item">Add Item</string>
    <string name="cart_purchase_actions_remove_items">Remove All</string>
    <string name="cart_purchase_item_unavailable_message">Item unavailable. Consider remove it from your cart.</string>
    <string name="cart_purchase_item_remove_item_content_desc">Remove Item</string>
    <string name="cart_purchase_item_format_amount">Quantity: %d</string>
    <string name="cart_purchase_item_format_total_price">x $%.1f</string>
    <string name="cart_delivery_info_title_pickup">Pick Up At</string>
    <string name="cart_delivery_info_title_delivery">Deliver to</string>
    <string name="cart_bottom_bar_format_total_price">$ %.1f</string>
    <string name="cart_total_price_format_cost">$%.1f</string>
    <string name="cart_clear_cart_dialog_title">Clear Cart</string>
    <string name="cart_clear_Cart_dialog_message">Do you want to remove all cart items?</string>
    <string name="cart_sync_required_message">One or more cart items need update.</string>
    <string name="cart_sync_required_action_refresh">Update</string>
    <string name="cart_cleared_message">Your cart is cleared.</string>
    <string name="cart_timeout_dialog_title">Continue with previous order?</string>
    <string name="cart_timeout_dialog_button_continue">Continue</string>
    <string name="cart_timeout_dialog_button_clear_cart">Clear Cart</string>
    <string name="rating_comment_title">Leave your comment.</string>
    <string name="rating_completed_title">Thank You!</string>
    <string name="rating_completed_description">Your feedback has been recorded.</string>
    <string name="rating_navigate_button">Next</string>
    <string name="rating_navigate_complete">Complete</string>
    <string name="rating_comment_hint">Comment</string>
</resources>