<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/rating_info_group"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:constraint_referenced_ids="rating_image_view,rating_title_text_view"
            app:layout_constraintHeight_percent="0.65"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/rating_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Foobar.Circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rating_seller_name_text_view" />

        <TextView
            android:id="@+id/rating_seller_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toBottomOf="@id/rating_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rating_title_text_view"
            tools:text="Happy Restaurant 餐廳"/>

        <TextView
            android:id="@+id/rating_title_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/rating_comment_title"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/material_on_surface_emphasis_medium"
            android:lineSpacingMultiplier="1.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_seller_name_text_view"
            app:layout_constraintBottom_toBottomOf="@id/rating_info_group" />

        <!--
            Shared transition issue
            https://stackoverflow.com/questions/46322081/textinputlayout-shared-element-transition-issue
        -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/rating_comment_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:hint="@string/rating_comment_hint"
            android:transitionGroup="true"
            app:layout_constraintTop_toBottomOf="@id/rating_info_group"
            app:layout_constraintBottom_toTopOf="@id/navigate_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rating_comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/navigate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_navigate_button"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_comment_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>